# TaskCore

./: .dockerignore  .env.production.example  .gitignore  LICENSE  Makefile  README.md  SETUP_GUIDE.md  WINDOWS_SETUP.md  architecture-spec.md  docker-compose.yml  pre-commit-config.yaml
backend/: .env.example  .env.production.example  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260409_0001_initial.py  20260413_0002_admin_llm_runtime.py  20260415_0003_user_profile_fields.py  20260416_0004_task_team_and_approval.py  20260417_0005_project_validation_nodes.py  20260417_0006_task_tags_reference.py  20260417_0007_validation_questions.py  20260421_0008_validation_question_source.py  20260422_0009_llm_request_payload_logging.py  20260422_0010_llm_agent_prompt_configs.py  20260426_0011_llm_provider_vision_settings.py  20260507_0016_notifications.py  (+13 more)
backend/tests/: conftest.py  test_admin_adaptation_eval_api.py  test_admin_change_proposal_eval_api.py  test_admin_orchestrator_eval_api.py  test_admin_qdrant_api.py  test_admin_qdrant_service.py  test_admin_qure_eval_api.py  test_admin_rag_eval_api.py  test_admin_runtime_api.py  test_admin_validation_eval_api.py  test_agent_graph_exports.py  test_auth_api.py  test_chat_agents.py  test_chat_routing.py  test_eval_judge_config.py  test_graph_run_monitoring.py  test_langgraph_images_api.py  test_llm_agent_registry.py  test_llm_prompt_registry.py  test_llm_runtime_service.py  test_notifications_api.py  test_projects_api.py  test_proposal_service.py  test_qdrant_service.py  test_qdrant_service_filters.py  test_rag_pipeline.py  test_rag_retrieval_graph.py  test_security.py  test_system_api.py  test_task_review_and_testing_api.py  test_task_service.py  test_task_tags_api.py  test_task_workflow_api.py  test_validation_graph.py
(+306 files in other folders)
